# app/Models/Pokemons.php
@@ -8,14 +8,19 @@ use Illuminate\Database\Eloquent\Model;
 use Prettus\Repository\Contracts\Transformable;
 use Prettus\Repository\Traits\TransformableTrait;
 
-class Question extends Model implements Transformable
+class Pokemons extends Model implements Transformable
 {
     use TransformableTrait;
 
 
     protected $fillable = [
-        'name'
-    ];
+        'name',
+        'tipo',
+        'poderatack',
+        'poderdefesa',
+        'agilidade',
+
+];
 
 
 }
